# nagare

./: .gitignore  README.md
case/01.cavity/mesh/: cavity.geo  cavity.msh  cavity_unst.geo  cavity_unst.msh
case/01.cavity/run_heat/: bcondConfig.yaml  solverConfig.yaml
case/01.cavity/run_smac/: bcondConfig.yaml  cavity.msh  cavity_unst.msh  gmon.out  solverConfig.yaml
case/01.cavity/run_smac_gpu/: cavity_unst.msh  check_vel.pvsm  identity_system.mtx  log  log_cpu  log_gpu  solverConfig.yaml
case/02.airfoil/: bcondConfig.yaml  solverConfig.yaml
case/02.airfoil/mesh/: supercritical.geo
case/02.airfoil/run/: gmon.out  log  log2  log3  solverConfig.yaml  supercritical.msh
case/02.airfoil/run_cuda/: GMRES_AMG_D2.json  bcondConfig.yaml  log  log_cpu  log_gpu  solverConfig.yaml  supercritical.msh
old/solver_smac_gpu/: CMakeLists.txt  boundaryCond.cpp  boundaryCond.hpp  calcCFL.cpp  main.cpp  solvePoisson_amgcl.cpp  update.cpp  variables.cpp  variables.hpp
old/solver_smac_gpu/amgcl_cuda/: CMakeLists.txt
old/solver_smac_gpu/input/: setInitial.hpp
old/solver_smac_gpu/mesh/: elementType.hpp  gmshReader.hpp  mesh.cpp
old/solver_smac_gpu/output/: output.hpp
old/solver_smac_gpu/thrust_nagare/: CMakeLists.txt  copyDeviceToHost_cell.cu  copyDeviceToHost_cell.h  setInitial_thrust.cu  setInitial_thrust.h  setStructualVariables_thrust.cu  setStructualVariables_thrust.h  update_thrust.cu  update_thrust.h  variables_thrust.cu  variables_thrust.h
solver_heat/: CMakeLists.txt  boundaryCond.hpp  diffusion.hpp  elementType.hpp  gmshReader.hpp  gradient.hpp  hdf5Reader.hpp  main.cpp  mesh.hpp  output.hpp  readConfig.hpp  solvePoisson_amgcl.cpp  solvePoisson_amgcl.hpp  timeIntegration.hpp  update.hpp  variables.hpp
solver_smac/: CMakeLists.txt  flowFormat.hpp  gradient.hpp  main.cpp  solveNavierStokes.cpp  solveNavierStokes.hpp  solvePoisson_amgcl.cpp  solvePoisson_amgcl.hpp  update.cpp  update.hpp  variables.cpp  variables.hpp
solver_smac.bk_amgx/: CMakeLists.txt  boundaryCond.cpp  main.cpp  solvePoisson_amgx.cpp  solvePoisson_amgx.hpp  variables.cpp
solver_smac.bk_amgx/mesh/: mesh.hpp
solver_smac/input/: setInitial.hpp  solverConfig.cpp  solverConfig.hpp
solver_smac/output/: output.cpp
solver_smac_cuda/: CMakeLists.txt  CMakeLists.txt.bk  boundaryCond.cpp  boundaryCond.hpp  calcCFL.hpp  gradient.cpp  log  main.cpp  setStructualVariables.cpp  setStructualVariables.hpp  solveNavierStokes.cpp  solvePoisson_amgx.cpp  solvePoisson_amgx.hpp  update.cpp  variables.cpp  variables.hpp
solver_smac_cuda/amgcl_cuda/: CMakeLists.txt  solvePoisson_amgcl_cuda.cu  solvePoisson_amgcl_cuda.h
solver_smac_cuda/common/: stringUtil.hpp  vectorUtil.hpp
solver_smac_cuda/cuda_nagare/: CMakeLists.txt  boundaryCond_d.cu  boundaryCond_d.cuh  calcConvDiff_d.cu  calcConvDiff_d.cuh  calcGradient_d.cu  calcGradient_d.cuh  calcStructualVariables_d.cu  calcStructualVariables_d.cuh  cudaConfig.cuh  cudaWrapper.cu  cudaWrapper.cuh  interpVelocity_c2p_d.cu  interpVelocity_c2p_d.cuh  updateCenterVelocity_d.cu  updateCenterVelocity_d.cuh
solver_smac_cuda/input/: setInitial.hpp
solver_smac_cuda/mesh/: convertGmshToNagare.cpp  gmshReader.hpp  mesh.cpp  mesh.hpp
solver_smac_cuda/output/: output.cpp
